[gd_scene load_steps=5 format=3 uid="uid://cg8ocgn34qhup"]

[ext_resource type="Texture2D" uid="uid://cqwkmshy4gidc" path="res://assets/images/tanks/gun_normal.png" id="1_p7vlr"]
[ext_resource type="Script" path="res://scenes/tanks/default_tank.gd" id="1_s8hku"]
[ext_resource type="Texture2D" uid="uid://b4twd83b7nicf" path="res://assets/images/tanks/blue_player_body.png" id="2_1b0eq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gffi3"]
radius = 129.062

[node name="DefaultTank" type="CharacterBody2D"]
collision_mask = 7
motion_mode = 1
script = ExtResource("1_s8hku")
bullet_speed = 1000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gffi3")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="BulletMarkers" type="Node2D" parent="."]

[node name="Marker1" type="Marker2D" parent="BulletMarkers"]
position = Vector2(0, -228)

[node name="GunNormal" type="Sprite2D" parent="."]
position = Vector2(1, -146)
scale = Vector2(0.85, 0.85)
texture = ExtResource("1_p7vlr")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("2_1b0eq")

[node name="CanBulletTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="CanBulletTimer" to="." method="_on_can_bullet_timer_timeout"]
